--- a/css/general.css
+++ b/css/general.css
@@ -28,11 +28,23 @@ Paragraph default: 1.6
 - Tints:
 #fdf2e9
 #fae5d3
-- Shades: #cf711f
+#eb984e
+- Shades: 
+#cf711f
+#45260a;
+
 - Accents: 
 - Greys: 
 
+#888
+#767676
+#6f6f6f
+#555
+#333
+
 --- 05 SHADOWS
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+
 
 --- 06 BORDER-RADIUS
 Default: 9px
@@ -80,6 +92,11 @@ body {
   display: grid;
   column-gap: 6.4rem;
   row-gap: 9.6rem;
+  margin-bottom: 9.6rem;
+}
+
+.grid:last-child {
+  margin-bottom: 0;
 }
 
 .grid--2-cols {
@@ -92,6 +109,10 @@ body {
 
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .grid--center-v {
@@ -134,6 +155,7 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -145,8 +167,12 @@ body {
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
+  /* Only necessary for .btn  */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+
   /* Put transition on original state */
-  /* transition: background-color 0.3s; */
   transition: all 0.3s;
 }
 
@@ -170,7 +196,20 @@ body {
 .btn--outline:hover,
 .btn--outline:active {
   background-color: #fdf2e9;
+  /* Adds border inside the element */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -189,6 +228,31 @@ body {
 .link:active {
   color: #cf711f;
   border-bottom: 1px solid transparent;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES */
